crates/anvil-codegen/tests/snapshots/emit_snapshots__emit_binds_alias_delegates_to_target.snap
---
source: crates/anvil-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by anvil v0.0.1. Do not edit.
// Source: ./shop-component.ts
import { ElectricHeater } from "./electric-heater";
import { Heater } from "./heater";
import { Shop } from "./shop-component";
export class DaggerShop extends Shop {
	private getElectricHeater(): ElectricHeater {
		return new ElectricHeater();
	}
	private getHeater(): Heater {
		return this.getElectricHeater();
	}
	heater(): Heater {
		return this.getHeater();
	}
	static create(): Shop {
		return new DaggerShop();
	}
}
export function createShop(): Shop {
	return DaggerShop.create();
}
