crates/anvil-codegen/tests/snapshots/emit_snapshots__emit_generic_key_produces_typed_factory.snap
---
source: crates/anvil-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by anvil v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import type { Repository } from "./repository";
import type { User } from "./user";
import { UserModule } from "./user-module";
export class AnvilApp extends App {
	private getRepositoryOfUser(): Repository<User> {
		return UserModule.users();
	}
	users(): Repository<User> {
		return this.getRepositoryOfUser();
	}
	static create(): App {
		return new AnvilApp();
	}
}
export function createApp(): App {
	return AnvilApp.create();
}
