crates/anvil-codegen/tests/snapshots/emit_snapshots__emit_inject_ctor_chain.snap
---
source: crates/anvil-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by anvil v0.0.1. Do not edit.
// Source: ./shop-component.ts
import { Heater } from "./heater";
import { Pump } from "./pump";
import { Shop } from "./shop-component";
export class AnvilShop extends Shop {
	private getHeater(): Heater {
		return new Heater();
	}
	private getPump(): Pump {
		return new Pump(this.getHeater());
	}
	pump(): Pump {
		return this.getPump();
	}
	static create(): Shop {
		return new AnvilShop();
	}
}
export function createShop(): Shop {
	return AnvilShop.create();
}
