crates/anvil-codegen/tests/snapshots/emit_snapshots__emit_subcomponent_factory_with_runtime_parameters.snap
---
source: crates/anvil-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by anvil v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import type { Handler, HttpRequest, HttpResponse } from "./http";
import { RequestComponent } from "./request-component";
import { RequestModule } from "./request-module";
export class DaggerApp extends App {
	requestComponent(req: HttpRequest, res: HttpResponse): RequestComponent {
		return new DaggerRequestComponent(this, req, res);
	}
	static create(): App {
		return new DaggerApp();
	}
}
export function createApp(): App {
	return DaggerApp.create();
}
export class DaggerRequestComponent extends RequestComponent {
	constructor(private parent: DaggerApp, private req: HttpRequest, private res: HttpResponse) {
		super();
	}
	private getHttpRequest(): HttpRequest {
		return this.req;
	}
	private getHttpResponse(): HttpResponse {
		return this.res;
	}
	private getHandler(): Handler {
		return RequestModule.handler(this.getHttpRequest(), this.getHttpResponse());
	}
	handler(): Handler {
		return this.getHandler();
	}
}
