crates/anvil-codegen/tests/snapshots/emit_snapshots__emit_token_binding_uses_inner_type_and_cast.snap
---
source: crates/anvil-codegen/tests/emit_snapshots.rs
expression: out
---
// AUTO-GENERATED by anvil v0.0.1. Do not edit.
// Source: ./app-component.ts
import { App } from "./app-component";
import { DbModule } from "./db-module";
export class AnvilApp extends App {
	private _primaryDb: Database | undefined;
	private getPrimaryDb(): Database {
		return this._primaryDb ??= (DbModule.primaryDb() as unknown) as Database;
	}
	db(): Database {
		return this.getPrimaryDb();
	}
	static create(): App {
		return new AnvilApp();
	}
}
export function createApp(): App {
	return AnvilApp.create();
}
